2017-03-09  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/atmosphere.py (relative_humidty):

	Calculate relative humidity for given VMR, pressure and temperature.

	* doc/typhon.atmosphere.rst: Added `relative_humidity` to docs.

2017-03-08  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Change complevel to 4 as tests show that it gets much slower, but
	not much faster, at higher complevels

	- Fix typo in two field names

	* typhon/physics/metrology.py: Correct docstring

	* typhon/physics/units/em.py(SRF.as_dataarray): Added method to
	convert SRF to a data array (NB: using regular DataArray, not
	UnitAwareDataArray, because I have no way of keeping track of units on
	coordinates in UnitAwareDataArray at the moment).

2017-03-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py: Simplified code around if-conditions.

2017-03-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/tools.py(UncertaintyAwareDataArray.to):

	Bugfix, adapt signature for contexts to the one used by pint, such
	that it works when the number of contexts given is not exactly one.

2017-03-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	Added `make_binary` and `make_directory_binary` to `__all__`.

	* (save): Added the new keyword `parents`.

	If `parents` is `True` missing parent directories are created.

	* (load_directory): Include zipped XML files to pattern.

	* (make_binary, make_directory_binary):

	Use the newly implemented `parents` keyword of `save` to create missing
	parent directories when needed.

	Both functions return the path(s) to the created file(s) to determine where
	the binary files are located.

	* doc/typhon.arts.rst: Added `make_binary` and `make_directory_binary`.

	* typhon/constants.py, typhon/physics/units/constants.py:

	Fixed typo in docstrings.

	* KNOWN_ISSUES: Removed solved issues.

2017-03-03  Gerrit Holl  <g.holl@reading.ac.uk>
